Added Navbar and Footer

--- a/base.html
+++ b/base.html
@@ -55,7 +55,7 @@
 
     <div class="container-fluid">
         <footer class="page-footer">
-            <div class="col s12 m6 footer-social">
+            <div class="footer-social">
                 <p>Social Media</p>
                 <span><a href="https://www.facebook.com/Tongue.Kung.Fu" target="_blank" class="white-text"><i class="fab fa-facebook fa-2x"></i></a></span>
                 <span><a href="https://www.instagram.com/papadum_is_nice/" target="_blank" class="white-text"><i class="fab fa-instagram fa-2x"></i></a></span>
